# fomc-hawkish-dovish

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.sh  tune.sh
.devcontainer/: devcontainer.json  docker-compose.yaml  post-create-command.sh
config/: main.yaml
src/classifier/: README.md  data_module.py  metrics.py  model.py  nn.py  train.py  tune.py
src/classifier/core/: data_module.py  lightning_module.py  metrics.py  nn.py
src/text_analysis/: sequence_length.ipynb
wandb/wandb/: latest-run
wandb/wandb/run-20241028_182023-wdm0xc77/files/media/table/test/: pr_curve_dovish_240_1787c1f90ef3ffc6e7ca.table.json  pr_curve_hawkish_241_72833ef8e684fea7df54.table.json  pr_curve_neutral_242_40b336f4452d0765e4ae.table.json
wandb/wandb/run-20241028_182023-wdm0xc77/files/media/table/val/: pr_curve_dovish_157_41dd3de4b790bf421843.table.json  pr_curve_dovish_236_4b9cd279f1afc55d0259.table.json  pr_curve_hawkish_158_f75a68110f943111d04a.table.json  pr_curve_hawkish_237_a39ee5c879b61808d72d.table.json  pr_curve_neutral_159_925c3f96a97370230e08.table.json  pr_curve_neutral_238_3ccf312120b5bdd72834.table.json
wandb/wandb/run-20241028_182448-synsh595/: run-synsh595.wandb
wandb/wandb/run-20241028_182448-synsh595/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/wandb/run-20241028_182448-synsh595/files/media/table/test/: pr_curve_dovish_161_2ed262626d7c3b3db1cf.table.json  pr_curve_hawkish_162_3d1d7ade04cbbb464778.table.json  pr_curve_neutral_163_8c9238de39e7d3a97bb3.table.json
(+9 files in other folders)
